react: Small styling refinments

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,7 +28,7 @@ nav h1 {
 }
 
 .text-content {
-  margin-top: 70px;
+  margin-top: 20px;
 }
 
 #sticky-footer {
@@ -93,7 +93,7 @@ nav h1 {
 .sign-in-up .right-inner-addon i {
   position: absolute;
   right: 0px;
-  padding: 17px 12px;
+  padding: 12px;
   pointer-events: none;
 }
 
