react: More Design Improvements

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -449,7 +449,7 @@ input {
     }
 
     .form-control {
-      width: 88%;
+      width: 90%;
     }
 
     .btn-success {
@@ -503,7 +503,7 @@ input {
     .list {
       background-color: #F3F4F6;
       border-bottom: 2px solid lightslategrey;
-      padding-bottom: 17%;
+      padding-bottom: 4.5rem;
       .graph,
       .col {
         padding-top: 14px;
