project: Fix Linters

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -129,7 +129,8 @@ input {
   border-color: #42b5e8;
 }
 
-input[type="text"], input[type="password"],
+input[type="text"],
+input[type="password"],
 .btn {
   border-radius: 0;
 }
